--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: Somesha Sridhara, Platform Engineer
 ---
 
-		<div class="blurb">
-			<h1>Hi there, I'm Hank Quinlan!</h1>
-			<p>I'm best known as the horrible cop from <em>A Touch of Evil</em>. Don't trust me. <a href="/about">Read more about my life...</a></p>
-		</div> 
+<div class="blurb">
+    <h1>Hi there!</h1>
+    <p>Welcome to my blog. This is intended to be a personal <em>wiki/dev-blog</em> for things I would like to record as
+        I learn and revisit when needed. Feel free to take a look!
+</div>
